front-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress
  template:
    metadata:
      labels:
        app: ingress
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: ingress
        image: nginx/nginx-ingress:latest-alpine
        ports:
        - containerPort: 8080
          name: ingress
        resources:
          requests:
            cpu: 1m
            memory: 200Mi
          limits:
            cpu: 1000m
            memory: 512Mi
