order-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: simpleapp
        image: pnsmiling/phonglp:lasted
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 1m
            memory: 50Mi
          limits:
            cpu: 75m
            memory: 128Mi
