front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: ỉngress
  type: LoadBalancer
