order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: simpleapp
