dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  namespace: flux-system
  annotations:
    #Ingress class
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.local.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ww-gitops-weave-gitops
            port:
              number: 9001
