nginx-ingress-controler.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-01
  annotations:
    #Ingress class
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: simpleapp2.local.host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-app-service-2
            port:
              number: 80
